# first_bot

./: .env  .gitignore  Cargo.toml  daemon.nixpacks.toml  daily.nixpacks.toml  flake.nix
.cargo/: config.toml
.sqlx/: query-1e634aa8b231ab19bac98881e8fd181b91afc8977f75b8b41f6161d5e788d633.json  query-3f439bef102a4651a958dd056875aa160c2b4f992e4d35e8db014b5dbc6be68e.json  query-4f7cea7d4d4f4f5b2f0e6994e71e10fb04a04bf78119c3f67b4ab3606050a0f3.json
migrations/: 20240130094257_init.sql
src/: commands.rs  main.rs
src/daemon/: commands.rs  db.rs  main.rs
src/daily/: main.rs
