[package]
name = "first_bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "daemon"
path = "src/daemon/main.rs"

# [[bin]]
# name = "daily"
# path = "src/daily/main.rs"

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
chrono-tz = { version = "0.8.5", features = ["serde"] }
env_logger = "0.11.1"
poise = "0.6.1"
tokio = { version = "1.35.1", features = ["full"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "tls-native-tls",
  "chrono",
  "postgres",
] }
log = "0.4.20"

shuttle-runtime = "0.37.0"
shuttle-secrets = "0.37.0"
shuttle-serenity = "0.37.0"
shuttle-shared-db = { version = "0.37.0", features = ["sqlx", "postgres"] }
